--- a/src/component/Home/HomeContent/Discount.scss
+++ b/src/component/Home/HomeContent/Discount.scss
@@ -12,35 +12,16 @@
   .session-discount-list {
     .customize-img-slider {
       .bg-img {
-        height: 213px;
-        width: 379px;
-        transform: translateX(25px); /* Căn giữa theo chiều ngang */
+        // response ảnh
+        width: 100%; /* Chiều rộng tự điều chỉnh */
+        max-width: 379px;
+        padding-top: 56.25%; /* Chiều cao tỷ lệ 9:16 */
+
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
         background-image: url("../../../../public/movie/km-m-2.webp");
         cursor: pointer;
-      }
-
-      @media (max-width: 1024px) {
-        .bg-img {
-          height: 100px;
-          width: 185px;
-        }
-      }
-
-      @media (max-width: 768px) {
-        .bg-img {
-          height: 80px;
-          width: 105px;
-        }
-      }
-
-      @media (max-width: 425px) {
-        .bg-img {
-          height: 60px;
-          width: 85px;
-        }
       }
     }
   }
