--- a/src/component/Movie/DatVe.scss
+++ b/src/component/Movie/DatVe.scss
@@ -1,5 +1,7 @@
-.down {
-  display: none;
+.booking-ticket-container .header-css {
+  .down {
+    display: none;
+  }
 }
 
 .booking-ticket-container {
