done css when hover phim -> modal show

--- a/src/component/Home/HomeContent/ListMovie.scss
+++ b/src/component/Home/HomeContent/ListMovie.scss
@@ -17,6 +17,7 @@
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center center;
+        border-radius: 10px;
         cursor: pointer;
       }
 
